--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
     <%= stylesheet %>
+    <link rel="stylesheet" href="./themes.css">
 </head>
 <body class="bg-white">
 
     <nav class="navbar navbar-expand-lg fixed-top">
-        <a id="nav-link-back" class="content-container" href="/" data-toggle="modal" data-target="#exitModal">
+        <!-- <a id="nav-link-back" class="content-container" href="/" data-toggle="modal" data-target="#exitModal">
             Back
         </a>
         <a id="nav-link-undo" class="content-container" href="javascript:void(0)" style="visibility: hidden;">
             Undo
-        </a>
+        </a> -->
         <h1 id="ptitle" class="nav-title"><%= name %></h1>
         <div id="psub">
             <span id="psubtitle"></span>
