--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
             <span id="psubtitle"></span>
             <span id="pauthor"></span>
         </div>
-        <button id="nav-link-menu" class="content-container navbar-toggler p-0 border-0 d-lg-none" type="button" data-toggle="offcanvas">
+        <!-- <button id="nav-link-menu" class="content-container navbar-toggler p-0 border-0 d-lg-none" type="button" data-toggle="offcanvas">
             Menu
-        </button>
+        </button> -->
     </nav>
 
     <main role="main" class="container-fluid">
