Fixed weird snapping with images

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,9 @@
     <%= stylesheet %>
     <link rel="stylesheet" href="./themes.css">
 </head>
-<body class="bg-white">
-
+<body>
+    <div style="position: fixed; bottom: 0; left: 0; height: 100vh; width: 100vw;" class="bg-white"></div>
+    
     <nav class="navbar navbar-expand-lg fixed-top">
         <!-- <a id="nav-link-back" class="content-container" href="/" data-toggle="modal" data-target="#exitModal">
             Back
